# GA4_Events_Scanner

./: .dockerignore  .env.example  .gitignore  CA_home_page.csv  Dockerfile  GA4_events_scaner.py  Makefile  RAG_POC.py  README.md  combined_test.py  credentials.json  deploy_local.sh  docker-compose.yml  ga4_events_results.json  gtm_and_ga4_events_GA4.csv  gtm_and_ga4_events_GA4.json  gtm_and_ga4_events_dataLayer.csv  gtm_and_ga4_events_dataLayer.json  launch.json  package-lock.json  pyproject.toml  requirements.txt  test_elastic.py  test_fetch_schema.py  total.py  visualisation_test.py
Aider/: Data_to_analysis.md  Event_Label_to_query.md  data_agent.md  director.py
Sample Data/: CTR.sql
_https___www_landrover_co_uk_index_html/: events_GA4.csv  events_GA4.json  events_dataLayer.csv  events_dataLayer.json
_https___www_landrover_co_uk_range_rover_index_html/: events_GA4.csv  events_GA4.json  events_dataLayer.csv  events_dataLayer.json
_https___www_landroverusa_com_range_rover_index_html/: events_GA4.csv  events_GA4.json  events_dataLayer.csv  events_dataLayer.json
app/: main.py  models.py  routes.py  utils.py
data_to_analysis/: GA4_events_scaner.py  app.py  email_generator.py  hypothesis_processor.py  langsmith_tracing.py  main.py
https___www_landroverusa_com_range_rover_index_html/: events_GA4.csv  events_GA4.json  events_dataLayer.csv  events_dataLayer.json
nl2sql/: docker-compose.yml  streamlit_app.py
openai_agent/: main.py  main_test.py
screenshot stuff/: page_screenshot.py
src/: main.py  query_agent.py  schema_agent.py
tests/: test_query_agent.py  (+3 more)
(+79 files in other folders)
