[project]
name = "ga4-collector"
version = "0.1.0"
description = "GA4 event collector using Selenium"
requires-python = ">=3.8"
dependencies = [
    "selenium",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"
